# firecrawl-lb

./: .all-contributorsrc  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  Dockerfile  Dockerfile.distroless  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.agents/environments/: environment.toml
.agents/skills/: skill-rules.json
.agents/skills/project-conventions/: SKILL.md  conventions.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  release-please-config.json
.github/DISCUSSION_TEMPLATE/: q-and-a.yml
.github/ISSUE_TEMPLATE/: account_quota.yml  bug_report.yml  config.yml  feature_request.yml
.github/scripts/: check_all_contributors.py  sync_codex_ok_labels.py
.github/workflows/: ci.yml  prepare-beta-release.yml  publish-beta-release.yml  release-please.yml  release.yml  windows-startup.yml
app/: __init__.py  cli.py  dependencies.py  main.py
app/core/: bootstrap.py  errors.py  exceptions.py  shutdown.py
app/core/auth/: dependencies.py
app/core/clients/: http.py
app/core/config/: settings.py
app/core/handlers/: exceptions.py
app/core/metrics/: middleware.py  prometheus.py
app/core/middleware/: __init__.py  api_firewall.py  firewall_cache.py  request_decompression.py
app/core/openai/: images.py
app/core/resilience/: backpressure.py  bulkhead.py  overload.py
app/core/tracing/: otel.py
app/db/: migrate.py  models.py  session.py
app/modules/dashboard_auth/: api.py  service.py
app/modules/firecrawl/: admin_service.py  api.py  client.py  models.py  refresh.py  repository.py  routing.py  schemas.py  service.py  usage.py
app/modules/health/: api.py  schemas.py
app/modules/runtime/: schemas.py  service.py
app/modules/settings/: api.py  repository.py  schemas.py  service.py
deploy/helm/firecrawl-lb/: Chart.yaml  README.md  values-staging.yaml  (+1 more)
frontend/: README.md  index.html  package.json  vite.config.ts
frontend/screenshots/: capture.spec.ts
frontend/src/: App.tsx  main.tsx
scripts/: distroless-entrypoint.py  docker-entrypoint.sh  guard_beta_release.py  guard_stable_release.py  helm-kind-smoke.sh  openai_compat_live_check.py  release_versions.py  reproduce_responses_stream_load.py  verify_rollout_safe_bridge.py  verify_v1_responses_openai_sdk.py
tests/: conftest.py
tests/integration/: test_health_and_errors.py  test_health_probes.py  test_runtime_api.py
tests/unit/: test_backpressure.py  test_bulkhead.py  test_check_all_contributors.py  test_cleanup_superseded_beta_prs.py  test_db_session.py  test_firecrawl_admin_api.py  test_firecrawl_cutover.py  test_firecrawl_proxy_persistence.py  test_firecrawl_routing_usage.py  test_firewall_cache_ttl.py  test_firewall_ip_resolution.py  test_graceful_shutdown.py  test_guard_beta_release.py  test_guard_stable_release.py  test_metrics.py  test_public_metadata_residue.py  test_release_versions.py  test_release_workflow_token_fail_closed.py  test_request_decompression_middleware.py  test_settings_home_dir.py  test_structured_logging.py  test_totp.py
(+70 files in other folders)
