[project]
name = "firecrawl-lb"
version = "1.20.0-beta.2"
description = "Firecrawl load balancer and proxy with usage dashboard"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Soju06" }]
maintainers = [{ name = "Soju06" }]
keywords = [
    "firecrawl",
    "load-balancer",
    "proxy",
    "fastapi",
    "api-gateway",
    "rate-limit",
    "usage",
    "dashboard",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Networking",
]
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.14.1",
    "alembic>=1.18.4",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "bcrypt>=4.3.0",

    "certifi>=2026.6.17",
    "cryptography>=48.0.1",
    "fastapi[standard]>=0.138.0",
    "greenlet>=3.5.2",
    "mako>=1.3.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",

    "pyotp>=2.10.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "psycopg[binary]>=3.3.4",
    "segno>=1.6.6",
    "sqlalchemy>=2.0.51",
    "starlette>=1.3.1",
    "urllib3>=2.7.0",
    "zstandard>=0.25.0",
]

[project.optional-dependencies]
metrics = ["prometheus-client>=0.20"]
tracing = [
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46",
    "opentelemetry-instrumentation-aiohttp-client>=0.46",
    "opentelemetry-instrumentation-sqlalchemy>=0.46",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "httpx>=0.28.1",
    "ruff>=0.15.19",
    "ty==0.0.52",

    "pytest-xdist>=3.8.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "e2e: end-to-end flow tests",
    "integration: tests that exercise multiple layers together",
    "unit: fast isolated tests",
]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:sqlalchemy",
    "ignore::DeprecationWarning:aiosqlite",
    "ignore::ResourceWarning",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ty.src]
exclude = [".agents/hooks/"]

[tool.ty.environment]
python-version = "3.14"

[project.scripts]
firecrawl-lb = "app.cli:main"
firecrawl-lb-db = "app.db.migrate:main"

[build-system]
requires = ["hatchling==1.30.1"]
build-backend = "hatchling.build"

[tool.hatch.build]
artifacts = ["app/static/**"]

[tool.hatch.build.targets.wheel]
packages = ["app","config"]
